[gd_scene load_steps=2 format=3 uid="uid://br1b7tn13qks7"]

[ext_resource type="Script" path="res://addons/w4gd/plugin/editor/w4_edit_profile.gd" id="1_ivdpt"]

[node name="W4EditProfile" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ivdpt")

[node name="EditForm" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -121.5
offset_right = 270.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="EditProfileTitleLabel" type="Label" parent="EditForm"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Edit workspace profile:"

[node name="VBoxContainer" type="VBoxContainer" parent="EditForm"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="EditForm/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EditForm/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="NameLineEdit" type="LineEdit" parent="EditForm/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="EditForm/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EditForm/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "URL:"

[node name="URLLineEdit" type="LineEdit" parent="EditForm/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="EditForm/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EditForm/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Anonymous key:"

[node name="KeyLineEdit" type="LineEdit" parent="EditForm/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ErrorLabel" type="Label" parent="EditForm"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Sample error"

[node name="HBoxContainer" type="HBoxContainer" parent="EditForm"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="EditForm/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="SaveButton" type="Button" parent="EditForm/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save
"

[connection signal="pressed" from="EditForm/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="EditForm/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
